<resources>
    <string name="app_name">WeatherZoomer</string>
    <string name="app_logo">App Logo</string>
    <string name="app_version">App Version:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_your_location">Set your location to start getting \nweather updates</string>
    <string name="enable_current_location">Enable current location</string>
    <string name="location_note">We only access your location while you are using the app to improve your experience.</string>
    <string name="enter_location_of_ur_choice">Enter location of your choice.</string>
    <string name="type_ur_location">Type your location.</string>
    <string name="set_location">Set location</string>
    <string name="please_wait_taking_ur_location">Please wait.\nTaking your current location.</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_enter_detail">Please enter this detail</string>
    <string name="please_enter_valid_email">Please enter a valid email id.</string>
    <string name="passwrd_confirm_passwrd_should_be_same">Password and Confirm Password field should be same.</string>
    <string name="sign_up_sub_title">Sign-up with email-password or sign with your existing google account</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="dont_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="login_screen_title">Please Login</string>
    <string name="login">Login</string>
    <string name="hi_welcome">Hi, Welcome</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="settings">Settings</string>
    <string name="change_app_theme">Change app theme</string>
    <string name="help">Help</string>
    <string name="select_theme">Select theme</string>
    <string name="about">About</string>
    <string name="change_your_theme_preference">Change your theme preference.</string>
    <string name="change_your_units_preference">Change your units preference.</string>
    <string name="tap_to_change">Tap to Change</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete Account</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="set_periodic_weather_updates">Set Periodic Weather Updates</string>
    <string name="set_periodic_updates">Set Periodic Updates</string>
    <string name="get_periodic_weather_notification">Get periodic weather updates through notification.</string>
    <string name="tap_to_set_time_interval">Tap to set time interval.</string>
    <string name="set_timely_updates">Set timely updates.</string>

    <string-array name="update_intervals">
        <item>Select interval in hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
    </string-array>

    <string name="screen1">Upload a Video</string>
    <string name="screen2">Create a Short</string>
    <string name="screen3">Go Live</string>
    <string name="screen1desc">Record a new video or select a video you already have on your phone.
        Watch YouTube Videos for Free</string>
    <string name="screen2desc">Create, edit, and upload your own short videos.
        All you need is an idea and a phone to record and share Shorts. </string>
    <string name="screen3desc">YouTube live streaming allows you to reach your community in real time.
    Go live on YouTube from webcam, mobile and encoder streaming.</string>
    <string name="startDesc">Create a long video or shorts and upload on youtube. Interact with your subscribers on youtube live.</string>
    <string name="change_location">Change location</string>
    <string name="cancel">Cancel</string>
    <string name="know_more">KNOW MORE</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="advice">Advice:</string>
    <string name="usa_aqi_text_one">Air quality is satisfactory, and air pollution poses little or no risk.</string>
    <string name="usa_aqi_text_two">Air quality is acceptable. However, there may be a risk for some people, particularly those who are unusually sensitive to air pollution.</string>
    <string name="usa_aqi_text_three">Members of sensitive groups may experience health effects. The general public is less likely to be affected.</string>
    <string name="usa_aqi_text_four">Some members of the general public may experience health effects; members of sensitive groups may experience more serious health effects.</string>
    <string name="usa_aqi_text_five">Health alert: The risk of health effects is increased for everyone.</string>
    <string name="usa_aqi_text_six">Health warning of emergency conditions: everyone is more likely to be affected.</string>
    <string name="uk_aqi_text_one">Enjoy your usual outdoor activities.</string>
    <string name="uk_aqi_text_two">Adults and children with lung problems, and adults with heart problems, who experience symptoms, should consider reducing strenuous physical activity, particularly outdoors.</string>
    <string name="uk_aqi_text_three">Adults and children with lung problems, and adults with heart problems, should reduce strenuous physical exertion, particularly outdoors, and particularly if they experience symptoms. People with asthma may find they need to use their reliever inhaler more often. Older people should also reduce physical exertion.</string>
    <string name="uk_aqi_text_four">Adults and children with lung problems, adults with heart problems, and older people, should avoid strenuous physical activity. People with asthma may find they need to use their reliever inhaler more often.</string>
    <string name="need_your_location">Need your location.</string>
    <string name="share_this_app">Share this app</string>
    <string name="share_app_text">Stay ahead of the weather trends!\nDownload this app for precise weather updates:</string>
    <string name="new_update_is_available">New update is available</string>
    <string name="update_now">Update now</string>
    <string name="powered_by_weatherapi_com">Powered by <font color="#1D71F2">WeatherAPI.com</font></string>
    <string name="current_version_is_not_supported_text">The current version of this application is no longer supported. We apologize for any inconvenience we may have caused you.</string>
    <string name="tap_to_continue">Tap to continue.</string>
    <string name="alert">Alert</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login_note_text">Your username must be unique. Use the same username to access your data. A new username will create a new account.</string>
    <string name="read_and_accept_text">I have read and I accept the</string>
    <string name="privacy_policy_text">By signing in, I agree to the app\'s</string>
    <string name="search_location">Search Location</string>
    <string name="condition_image">Condition Image</string>
    <string name="wind">Wind</string>
    <string name="set_as_primary_location">Set as primary location.</string>
    <string name="your_current_location">Your current location</string>
    <string name="delete_saved_location">delete saved location</string>
    <string name="recent_locations">Recent Locations</string>
    <string name="locations">Locations</string>
    <string name="add_new_location">Add new location</string>
</resources>