<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.updateApp.UpdateAppActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_update_app"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/update_app_image"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_title"
        style="@style/BigBoldText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_update_is_available"
        android:textColor="@color/dark_text_color"
        app:layout_constraintTop_toBottomOf="@id/img_update_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_version_is_not_supported_text"
        style="@style/SmallRegularText"
        android:textColor="@color/dark_text_color"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="18dp"/>

    <Button
        android:id="@+id/btn_update_app"
        style="@style/BUTTON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="18dp"
        android:padding="16dp"
        android:text="@string/update_now"/>

</androidx.constraintlayout.widget.ConstraintLayout>